<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".fragments.FeedBackFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="100dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/nav_feedback"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edt_secondname_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/second_name"
            android:inputType="text"
            app:met_floatingLabel="highlight"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edt_firstname_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/first_name"
            android:inputType="text"
            app:met_floatingLabel="highlight"
            app:met_singleLineEllipsis="true" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_tel_num_layout_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_tel_num_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/num_tel"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edt_problem_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/report"
            android:inputType="textMultiLine"
            app:met_floatingLabel="highlight"
            app:met_singleLineEllipsis="true" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_send_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/call" />

        <com.github.rahatarmanahmed.cpv.CircularProgressView
            android:id="@+id/cpv_sign_in_loader"
            android:layout_width="@dimen/loaded_size"
            android:layout_height="@dimen/loaded_size"
            android:layout_gravity="center"
            android:visibility="gone"
            app:cpv_animAutostart="true"
            app:cpv_color="@color/colorPrimary"
            app:cpv_indeterminate="true" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>